--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,76 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+     android:layout_width="match_parent" 
+     android:layout_height="match_parent"
+     android:orientation="vertical">
+
+   <RelativeLayout 
+     android:orientation="vertical"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     >
+
     <com.topodroid.Cave3D.Cave3DView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/caveView"
     />
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-    >
-        <Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/btn_move"
-                android:onClick="onClick"
-                android:id="@+id/modeBtn"
-        />
-        <Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/btn_station"
-                android:onClick="onClick"
-                android:id="@+id/stnsBtn"
-        />
-        <Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/btn_splay"
-                android:onClick="onClick"
-                android:id="@+id/splayBtn"
-        />
-        <Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/Wall"
-                android:onClick="onClick"
-                android:id="@+id/wallBtn"
-        />
-        <Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/Surface"
-                android:onClick="onClick"
-                android:id="@+id/surfaceBtn"
-        />
-        <!-- Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/btn_zoom_in"
-                android:onClick="onClick"
-                android:id="@+id/zoomInBtn"
-        / -->
-        <!-- Button
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/btn_zoom_out"
-                android:onClick="onClick"
-                android:id="@+id/zoomOutBtn"
-        / -->
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      >
+      <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:layout_toLeftOf="@+id/right"
+          >
+          <com.topodroid.Cave3D.HorizontalListView android:id="@+id/listview"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            />
+        </LinearLayout>
 
+        <LinearLayout android:id="@+id/right"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentRight="true"
+          android:background="#111"
+          >
+          <Button android:id="@+id/handle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/iz_menu"
+            />
+        </LinearLayout>
+      </RelativeLayout>
+
+      <ListView android:id="@+id/menu"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
+        android:background="#111"
+        android:orientation="vertical"
+        android:layout_gravity="right"
+        android:gravity="right"
+        />
     </LinearLayout>
     <View
-         android:id="@+id/zoomView"
-         android:layout_height="wrap_content"
-         android:layout_width="wrap_content"
-         android:layout_gravity="center"
-    />
+      android:id="@+id/zoomView"
+      android:layout_height="wrap_content"
+      android:layout_width="wrap_content"
+      android:layout_gravity="center"
+      />
+  </RelativeLayout>
 
-</RelativeLayout>
+</FrameLayout>
 
