--- a/res/layout/cave3d_station_distance_dialog.xml
+++ b/res/layout/cave3d_station_distance_dialog.xml
@@ -10,28 +10,38 @@
     <TextView android:id="@+id/st_name"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
+      android:layout_marginBottom="20sp"
       android:gravity="left"
       />
 
-      <TextView android:id="@+id/st.east"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
-      <TextView android:id="@+id/st_north"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
-      <TextView android:id="@+id/st_vert"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
-      <TextView android:id="@+id/st_dist"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
+    <TextView android:id="@+id/st.east"
+        android:layout_width="100dip" 
+        android:layout_height="wrap_content" 
+        android:layout_marginBottom="10sp"
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_north"
+        android:layout_width="100dip" 
+        android:layout_height="wrap_content" 
+        android:layout_marginBottom="10sp"
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_vert"
+        android:layout_width="100dip" 
+        android:layout_height="wrap_content" 
+        android:layout_marginBottom="10sp"
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_dist"
+        android:layout_width="100dip" 
+        android:layout_height="wrap_content" 
+        android:layout_marginBottom="25sp"
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_cave_pathlength"
+        android:layout_width="100dip" 
+        android:layout_height="wrap_content" 
+        android:gravity="left"
+        />
 
 </LinearLayout>
