--- a/res/layout/cave3d_export_dialog.xml
+++ b/res/layout/cave3d_export_dialog.xml
@@ -72,7 +72,6 @@
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="10dp"
-      android:layout_marginBottom="20dp"
       >
         <CheckBox android:id="@+id/stl_binary"
           android:layout_width="0dp"
@@ -88,12 +87,27 @@
           android:layout_marginRight="10dp"
           android:text="STL"
         />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="20dp"
+      >
         <CheckBox android:id="@+id/kml_ascii"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="50"
           android:layout_marginRight="10dp"
           android:text="KML"
+        />
+        <CheckBox android:id="@+id/cgal_ascii"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="50"
+          android:layout_marginRight="10dp"
+          android:text="CGAL"
         />
         <!-- RadioButton android:id="@+id/debug"
           android:layout_width="0dp"
