--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -86,4 +86,31 @@
        />
    </android.preference.PreferenceCategory>
 
+<!--
+   <android.preference.CheckBoxPreference
+       android:key="CAVE3D_CONVEX_HULL"
+       android:title="@string/pref_convex_hull_title"
+       android:summary="@string/pref_convex_hull_summary"
+       android:dialogTitle="@string/pref_convex_hull_title"
+       />
+   <android.preference.CheckBoxPreference
+       android:key="CAVE3D_POWERCRUST"
+       android:title="@string/pref_powercrust_title"
+       android:summary="@string/pref_powercrust_summary"
+       android:dialogTitle="@string/pref_powercrust_title"
+       />
+   <android.preference.CheckBoxPreference
+       android:key="CAVE3D_DELAUNAY"
+       android:title="@string/pref_delaunay_title"
+       android:summary="@string/pref_delaunay_summary"
+       android:dialogTitle="@string/pref_delaunay_title"
+       />
+   <android.preference.CheckBoxPreference
+       android:key="CAVE3D_HULL"
+       android:title="@string/pref_hull_title"
+       android:summary="@string/pref_hull_summary"
+       android:dialogTitle="@string/pref_hull_title"
+       />
+-->
+
 </PreferenceScreen>
