--- a/res/layout/cave3d_export_dialog.xml
+++ b/res/layout/cave3d_export_dialog.xml
@@ -107,6 +107,20 @@
         android:layout_marginRight="10dp"
         android:text="CGAL"
       />
+    </LinearLayout>
+    <LinearLayout
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:layout_marginTop="10dp"
+      >
+      <CheckBox android:id="@+id/dxf_ascii"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:layout_marginRight="10dp"
+        android:text="DXF"
+      />
       <CheckBox android:id="@+id/las_binary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
