--- a/res/layout/cave3d_view_dialog.xml
+++ b/res/layout/cave3d_view_dialog.xml
@@ -67,26 +67,22 @@
           android:text="@string/view_point"
       / -->
       <CheckBox android:id="@+id/view_zoom"
-          android:layout_width="wrap_content"
+          android:layout_width="0dp"
           android:layout_height="wrap_content"
+          android:layout_weight="50"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:text="@string/view_zoom"
       />
-      <LinearLayout
-        android:layout_width="fill_parent" 
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="right"
-        >
-        <Button android:id="@+id/button_ok"
-          android:layout_width="wrap_content" 
+      <Button android:id="@+id/button_ok"
+          style="@style/button_default"
+          android:layout_width="0dp" 
           android:layout_height="wrap_content"
+          android:layout_weight="50"
           android:layout_marginLeft="10dp"
-          android:layout_marginRight="5dp"
-          android:text="OK"
-        />
-      </LinearLayout>
+          android:layout_marginRight="10dp"
+          android:text="@string/btn_ok"
+      />
     </LinearLayout>
 
 </LinearLayout>
