--- a/res/layout/cave3d_walls_dialog.xml
+++ b/res/layout/cave3d_walls_dialog.xml
@@ -69,11 +69,22 @@
         android:layout_marginTop="20dp"
         >
         <Button android:id="@+id/button_ok"
-          android:layout_width="wrap_content" 
+          style="@style/button_default"
+          android:layout_width="0dp" 
           android:layout_height="wrap_content"
+          android:layout_weight="50"
           android:layout_marginLeft="10dp"
-          android:layout_marginRight="5dp"
-          android:text="OK"
+          android:layout_marginRight="10dp"
+          android:text="@string/btn_ok"
+        />
+        <Button android:id="@+id/button_cancel"
+          style="@style/button_default"
+          android:layout_width="0dp" 
+          android:layout_height="wrap_content"
+          android:layout_weight="50"
+          android:layout_marginLeft="10dp"
+          android:layout_marginRight="10dp"
+          android:text="@string/btn_cancel"
         />
       </LinearLayout>
 
