--- a/res/layout/cave3d_info_dialog.xml
+++ b/res/layout/cave3d_info_dialog.xml
@@ -176,12 +176,37 @@
     
     
     <ListView android:id="@+id/surveys_list"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:stackFromBottom="true"
-          android:transcriptMode="alwaysScroll"
-          android:layout_weight="1"
-          android:textSize="14sp"
+        style="@style/list_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
      />  
 
+
+    <LinearLayout
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:layout_marginTop="10dp"
+      >
+      <Button android:id="@+id/button_ok"
+        style="@style/button_default"
+        android:layout_width="0dp" 
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="@string/btn_ok"
+      />
+      <Button android:id="@+id/button_transp"
+        style="@style/button_default"
+        android:background="#00000000"
+        android:layout_width="0dp" 
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text=""
+      />
+   </LinearLayout>
 </LinearLayout>
