--- a/res/layout/cave3d_surveys_dialog.xml
+++ b/res/layout/cave3d_surveys_dialog.xml
@@ -6,12 +6,10 @@
       android:layout_height="fill_parent"
       >
       <ListView android:id="@+id/surveys_list"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:stackFromBottom="true"
-          android:transcriptMode="alwaysScroll"
-          android:layout_weight="1"
-          android:textSize="12sp"
+        style="@style/list_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
       />  
   </LinearLayout>
 
