--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#ff6699ff"
-    android:background="#ff333333"
+    android:background="@color/edit_background"
     android:singleLine="true"
     android:typeface="monospace"
     android:padding="5dp"
