--- a/res/layout/cave3d_station_dialog.xml
+++ b/res/layout/cave3d_station_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="wrap_content" 
+    android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="6dip"
@@ -8,35 +8,36 @@
     android:paddingBottom="3dip">
    					  
     <TextView android:id="@+id/st_name"
-      android:layout_width="wrap_content" 
+      android:layout_width="fill_parent" 
       android:layout_height="wrap_content" 
+      android:layout_marginBottom="25dp"
       android:gravity="left"
       />
 
-      <TextView android:id="@+id/st.east"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
-      <TextView android:id="@+id/st_north"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
-      <TextView android:id="@+id/st_vert"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          />
-
-      <TextView android:id="@+id/st_surface"
-          android:layout_width="100dip" 
-          android:layout_height="wrap_content" 
-          android:gravity="left"
-          android:layout_marginTop="10dp"
-          android:layout_marginBottom="10dp"
-          android:text="Depth"
-          />
+    <TextView android:id="@+id/st.east"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content" 
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_north"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content" 
+        android:layout_marginBottom="10dp"
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_vert"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content" 
+        android:layout_marginBottom="10dp"
+        android:gravity="left"
+        />
+    <TextView android:id="@+id/st_surface"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content" 
+        android:gravity="left"
+        android:layout_marginBottom="10dp"
+        android:text="Depth"
+        />
 
   <!-- LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="wrap_content" 
@@ -61,5 +62,12 @@
 
   </LinearLayout -->
 
+    <Button android:id="@+id/btn_close"
+        style="@style/button_default"
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+        android:layout_marginTop="25sp"
+        android:text="@string/btn_close"
+    />
 
 </LinearLayout>
