--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,80 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-  android:layout_width="fill_parent" 
-  android:layout_height="fill_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical"
   >
-
-  <LinearLayout android:id="@+id/view_layout"
-    android:layout_width="fill_parent"
+  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:layout_width="match_parent" 
     android:layout_height="fill_parent"
-  />
-
-  <LinearLayout android:id="@+id/bar_layout"
+    android:layout_gravity="top"
+    >
+  
+    <LinearLayout android:id="@+id/view_layout"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      >
-      <RelativeLayout
+      android:layout_height="fill_parent"
+    />
+  
+    <LinearLayout android:id="@+id/bar_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
         >
+        <RelativeLayout
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal"
+          >
+          <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/right"
+            >
+            <com.topodroid.Cave3D.HorizontalListView android:id="@+id/listview"
+              android:layout_width="fill_parent"
+              android:layout_height="50dp"
+              />
+          </LinearLayout>
+  
+          <LinearLayout android:id="@+id/right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="#111"
+            >
+            <Button android:id="@+id/handle"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:background="@drawable/iz_menu"
+              />
+          </LinearLayout>
+        </RelativeLayout>
+  
         <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:layout_toLeftOf="@+id/right"
-          >
-          <com.topodroid.Cave3D.HorizontalListView android:id="@+id/listview"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            />
-        </LinearLayout>
-
-        <LinearLayout android:id="@+id/right"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentRight="true"
-          android:background="#111"
-          >
-          <Button android:id="@+id/handle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/iz_menu"
-            />
-        </LinearLayout>
-      </RelativeLayout>
-
-      <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="right"
-        >
-        <Button android:id="@+id/current_station"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="left"
-          android:gravity="left"
-          />
-        <ListView android:id="@+id/menu"
-          android:layout_width="150dp"
-          android:layout_height="wrap_content"
-          android:choiceMode="singleChoice"
-          android:divider="@android:color/transparent"
-          android:dividerHeight="10dp"
-          android:orientation="vertical"
-          android:layout_gravity="right"
+          android:orientation="horizontal"
           android:gravity="right"
-          android:textSize="@dimen/textsize"
-          android:background="@color/edit_background"
-          />
-      </LinearLayout>
-  </LinearLayout>
-  <!-- View
-      android:id="@+id/zoomView"
-      android:layout_height="wrap_content"
+          >
+          <ListView android:id="@+id/menu"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10dp"
+            android:orientation="vertical"
+            android:layout_gravity="right"
+            android:gravity="right"
+            android:textSize="@dimen/textsize"
+            android:background="@color/edit_background"
+            />
+        </LinearLayout>
+    </LinearLayout>
+  </RelativeLayout>
+  <LinearLayout android:id="@+id/layout_station"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom"
+    android:gravity="bottom"
+    android:orientation="horizontal"
+    android:background="#990099ff"
+    >
+    <Button android:id="@+id/current_station"
       android:layout_width="wrap_content"
-      android:layout_gravity="center"
-      / -->
-</RelativeLayout>
+      android:layout_height="wrap_content"
+      android:layout_gravity="left"
+      android:paddingLeft="10dp"
+      android:paddingRight="5dp"
+      android:gravity="left"
+      android:background="#990066cc"
+      android:textColor="#ffffffff"
+    />
+    <CheckBox android:id="@+id/measure_station"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingLeft="5dp"
+      android:paddingRight="10dp"
+      android:layout_gravity="right"
+      android:gravity="right"
+      android:text="@string/measure"
+      android:background="#990099ff"
+      android:textColor="#ffffffff"
+    />
+  </LinearLayout>
 
+</FrameLayout>
