--- a/res/layout/cave3d_walls_dialog.xml
+++ b/res/layout/cave3d_walls_dialog.xml
@@ -8,6 +8,17 @@
     android:paddingBottom="3dip">
 
 
+    <SeekBar android:id="@+id/alpha"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="10dp"
+      android:layout_marginLeft="10dp"
+      android:layout_marginRight="10dp"
+      android:layout_marginTop="25dp"
+      android:padding="10dp"
+      android:max="255"
+      android:background="#666666"
+    />
 
     <LinearLayout
         android:layout_width="fill_parent" 
